--- a/index.html
+++ b/index.html
@@ -3,69 +3,109 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Conversor TXT para PDF</title>
+  <title>Conversor Web: TXT ⇄ PDF</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+  <script src="https://unpkg.com/tesseract.js@2.1.5/dist/tesseract.min.js"></script>
 </head>
 <body class="bg-light">
-
   <div class="container py-5">
-    <div class="card shadow-sm">
-      <div class="card-body">
-        <h2 class="card-title mb-4 text-center text-primary">Conversor de Arquivo TXT para PDF</h2>
+    <div class="text-center mb-5">
+      <h1 class="text-primary">Conversor TXT ⇄ PDF 100% Web</h1>
+      <p class="text-muted">Converta arquivos TXT em PDF ou extraia texto de PDFs (com OCR)</p>
+    </div>
 
-        <div class="mb-3">
-          <label for="txtFile" class="form-label">Selecione o arquivo .txt:</label>
-          <input class="form-control" type="file" id="txtFile" accept=".txt">
+    <div class="row">
+      <div class="col-md-6">
+        <div class="card shadow-sm mb-4">
+          <div class="card-body">
+            <h5 class="card-title">1. TXT → PDF</h5>
+            <input type="file" class="form-control mb-3" id="txtFile" accept=".txt">
+            <button class="btn btn-success w-100" onclick="converterParaPDF()">Converter para PDF</button>
+            <div id="msgPdf" class="mt-3 text-center text-muted"></div>
+          </div>
         </div>
+      </div>
 
-        <div class="text-center">
-          <button class="btn btn-success" onclick="converterParaPDF()">Converter e Baixar PDF</button>
+      <div class="col-md-6">
+        <div class="card shadow-sm mb-4">
+          <div class="card-body">
+            <h5 class="card-title">2. PDF/Imagem → TXT (OCR)</h5>
+            <input type="file" class="form-control mb-3" id="pdfFile" accept=".pdf,.png,.jpg,.jpeg">
+            <button class="btn btn-primary w-100" onclick="extrairTextoOCR()">Extrair Texto (OCR)</button>
+            <div id="ocrOutput" class="mt-3 text-break" style="white-space: pre-wrap;"></div>
+          </div>
         </div>
-
-        <div id="mensagem" class="mt-4 text-center text-muted"></div>
       </div>
     </div>
   </div>
 
-  <script>
-    async function converterParaPDF() {
-      const fileInput = document.getElementById('txtFile');
-      const file = fileInput.files[0];
-      const mensagem = document.getElementById('mensagem');
+<script>
+  async function converterParaPDF() {
+    const file = document.getElementById('txtFile').files[0];
+    const msg = document.getElementById('msgPdf');
 
-      if (!file) {
-        mensagem.innerText = '⚠️ Por favor, selecione um arquivo .txt.';
-        return;
-      }
-
-      const reader = new FileReader();
-      reader.onload = async function(e) {
-        const conteudo = e.target.result;
-
-        const { jsPDF } = window.jspdf;
-        const pdf = new jsPDF();
-
-        const linhas = conteudo.split('\n');
-        let y = 10;
-
-        linhas.forEach((linha) => {
-          if (y > 280) {
-            pdf.addPage();
-            y = 10;
-          }
-          pdf.text(linha, 10, y);
-          y += 10;
-        });
-
-        const nomeArquivo = file.name.replace('.txt', '') + '.pdf';
-        pdf.save(nomeArquivo);
-        mensagem.innerText = '✅ Arquivo PDF gerado com sucesso!';
-      };
-
-      reader.readAsText(file);
+    if (!file) {
+      msg.innerText = 'Selecione um arquivo TXT.';
+      return;
     }
-  </script>
+
+    const reader = new FileReader();
+    reader.onload = function(e) {
+      const conteudo = e.target.result;
+      const { jsPDF } = window.jspdf;
+      const pdf = new jsPDF();
+      const linhas = conteudo.split('\n');
+      let y = 10;
+
+      linhas.forEach(linha => {
+        if (y > 280) {
+          pdf.addPage();
+          y = 10;
+        }
+        pdf.text(linha, 10, y);
+        y += 10;
+      });
+
+      const nome = file.name.replace('.txt', '') + '.pdf';
+      pdf.save(nome);
+      msg.innerText = '✅ PDF gerado com sucesso!';
+    };
+    reader.readAsText(file);
+  }
+
+  async function extrairTextoOCR() {
+    const file = document.getElementById('pdfFile').files[0];
+    const output = document.getElementById('ocrOutput');
+
+    if (!file) {
+      output.innerText = 'Selecione uma imagem ou PDF (convertido para imagem).';
+      return;
+    }
+
+    output.innerText = '🕒 Processando...';
+
+    const reader = new FileReader();
+    reader.onload = function(e) {
+      Tesseract.recognize(
+        e.target.result,
+        'por',
+        {
+          logger: m => {
+            if (m.status === "recognizing text") {
+              output.innerText = `🔍 Reconhecendo texto... ${Math.round(m.progress * 100)}%`;
+            }
+          }
+        }
+      ).then(({ data: { text } }) => {
+        output.innerText = '📝 Texto extraído:\n\n' + text;
+      }).catch(err => {
+        output.innerText = 'Erro ao processar OCR: ' + err.message;
+      });
+    };
+    reader.readAsDataURL(file);
+  }
+</script>
 
 </body>
 </html>
