--- a/index.html
+++ b/index.html
@@ -2,25 +2,29 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <title>Conversor Web: TXT ⇄ PDF</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <title>Conversor Web Completo</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/pdf-lib/dist/pdf-lib.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/pdfjs-dist@2.16.105/build/pdf.min.js"></script>
   <script src="https://unpkg.com/tesseract.js@2.1.5/dist/tesseract.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/mammoth/1.4.2/mammoth.browser.min.js"></script>
+  <script src="https://unpkg.com/html-docx-js/dist/html-docx.js"></script>
 </head>
 <body class="bg-light">
   <div class="container py-5">
     <div class="text-center mb-5">
-      <h1 class="text-primary">Conversor TXT ⇄ PDF 100% Web</h1>
-      <p class="text-muted">Converta arquivos TXT em PDF ou extraia texto de PDFs (com OCR)</p>
+      <h1 class="text-primary">Conversor Web Completo: TXT ⇄ PDF ⇄ DOCX</h1>
+      <p class="text-muted">100% no navegador — sem instalar nada</p>
     </div>
 
-    <div class="row">
+    <div class="row g-4">
       <div class="col-md-6">
-        <div class="card shadow-sm mb-4">
+        <div class="card shadow-sm">
           <div class="card-body">
             <h5 class="card-title">1. TXT → PDF</h5>
-            <input type="file" class="form-control mb-3" id="txtFile" accept=".txt">
+            <input type="file" class="form-control mb-3" id="txtFile" accept=".txt" />
             <button class="btn btn-success w-100" onclick="converterParaPDF()">Converter para PDF</button>
             <div id="msgPdf" class="mt-3 text-center text-muted"></div>
           </div>
@@ -28,12 +32,34 @@
       </div>
 
       <div class="col-md-6">
-        <div class="card shadow-sm mb-4">
+        <div class="card shadow-sm">
           <div class="card-body">
-            <h5 class="card-title">2. PDF/Imagem → TXT (OCR)</h5>
-            <input type="file" class="form-control mb-3" id="pdfFile" accept=".pdf,.png,.jpg,.jpeg">
-            <button class="btn btn-primary w-100" onclick="extrairTextoOCR()">Extrair Texto (OCR)</button>
+            <h5 class="card-title">2. PDF (com imagem) → Texto (OCR)</h5>
+            <input type="file" class="form-control mb-3" id="pdfFile" accept=".pdf" />
+            <button class="btn btn-primary w-100" onclick="extrairTextoPDF_OCR()">Extrair Texto do PDF</button>
             <div id="ocrOutput" class="mt-3 text-break" style="white-space: pre-wrap;"></div>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-6">
+        <div class="card shadow-sm">
+          <div class="card-body">
+            <h5 class="card-title">3. DOCX → Texto</h5>
+            <input type="file" class="form-control mb-3" id="docxFile" accept=".docx" />
+            <button class="btn btn-warning w-100" onclick="docxParaTexto()">Converter para Texto</button>
+            <div id="docxOutput" class="mt-3 text-break" style="white-space: pre-wrap;"></div>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-6">
+        <div class="card shadow-sm">
+          <div class="card-body">
+            <h5 class="card-title">4. Texto → DOCX</h5>
+            <textarea class="form-control mb-3" id="textoParaDocx" rows="5" placeholder="Digite ou cole o texto..."></textarea>
+            <button class="btn btn-dark w-100" onclick="textoParaDocx()">Baixar como DOCX</button>
+            <div id="msgDocx" class="mt-3 text-center text-muted"></div>
           </div>
         </div>
       </div>
@@ -44,7 +70,6 @@
   async function converterParaPDF() {
     const file = document.getElementById('txtFile').files[0];
     const msg = document.getElementById('msgPdf');
-
     if (!file) {
       msg.innerText = 'Selecione um arquivo TXT.';
       return;
@@ -57,7 +82,6 @@
       const pdf = new jsPDF();
       const linhas = conteudo.split('\n');
       let y = 10;
-
       linhas.forEach(linha => {
         if (y > 280) {
           pdf.addPage();
@@ -66,46 +90,95 @@
         pdf.text(linha, 10, y);
         y += 10;
       });
-
-      const nome = file.name.replace('.txt', '') + '.pdf';
-      pdf.save(nome);
+      pdf.save(file.name.replace('.txt', '') + '.pdf');
       msg.innerText = '✅ PDF gerado com sucesso!';
     };
     reader.readAsText(file);
   }
 
-  async function extrairTextoOCR() {
+  async function extrairTextoPDF_OCR() {
     const file = document.getElementById('pdfFile').files[0];
     const output = document.getElementById('ocrOutput');
-
     if (!file) {
-      output.innerText = 'Selecione uma imagem ou PDF (convertido para imagem).';
+      output.innerText = 'Selecione um arquivo PDF.';
       return;
     }
 
-    output.innerText = '🕒 Processando...';
+    output.innerText = '🕒 Extraindo imagens...';
+
+    const reader = new FileReader();
+    reader.onload = async function(e) {
+      const pdfData = new Uint8Array(e.target.result);
+      const pdf = await pdfjsLib.getDocument({ data: pdfData }).promise;
+      let resultadoFinal = '';
+
+      for (let pageNum = 1; pageNum <= pdf.numPages; pageNum++) {
+        const page = await pdf.getPage(pageNum);
+        const viewport = page.getViewport({ scale: 2 });
+        const canvas = document.createElement("canvas");
+        const context = canvas.getContext("2d");
+        canvas.height = viewport.height;
+        canvas.width = viewport.width;
+
+        await page.render({ canvasContext: context, viewport: viewport }).promise;
+
+        output.innerText = `📄 Processando página ${pageNum} de ${pdf.numPages}...`;
+
+        await Tesseract.recognize(
+          canvas.toDataURL("image/png"),
+          'por',
+          {
+            logger: m => {
+              if (m.status === "recognizing text") {
+                output.innerText = `🔍 Página ${pageNum}: ${Math.round(m.progress * 100)}%`;
+              }
+            }
+          }
+        ).then(({ data: { text } }) => {
+          resultadoFinal += `\n\n[Página ${pageNum}]\n${text}`;
+        }).catch(err => {
+          resultadoFinal += `\n\n[Página ${pageNum}] ERRO: ${err.message}`;
+        });
+      }
+
+      output.innerText = resultadoFinal.trim();
+    };
+    reader.readAsArrayBuffer(file);
+  }
+
+  function docxParaTexto() {
+    const input = document.getElementById('docxFile').files[0];
+    const output = document.getElementById('docxOutput');
+    if (!input) {
+      output.innerText = 'Selecione um arquivo .docx.';
+      return;
+    }
 
     const reader = new FileReader();
     reader.onload = function(e) {
-      Tesseract.recognize(
-        e.target.result,
-        'por',
-        {
-          logger: m => {
-            if (m.status === "recognizing text") {
-              output.innerText = `🔍 Reconhecendo texto... ${Math.round(m.progress * 100)}%`;
-            }
-          }
-        }
-      ).then(({ data: { text } }) => {
-        output.innerText = '📝 Texto extraído:\n\n' + text;
-      }).catch(err => {
-        output.innerText = 'Erro ao processar OCR: ' + err.message;
-      });
+      const arrayBuffer = e.target.result;
+      mammoth.extractRawText({ arrayBuffer: arrayBuffer })
+        .then(result => output.innerText = result.value)
+        .catch(err => output.innerText = 'Erro ao converter: ' + err.message);
     };
-    reader.readAsDataURL(file);
+    reader.readAsArrayBuffer(input);
+  }
+
+  function textoParaDocx() {
+    const texto = document.getElementById('textoParaDocx').value;
+    const msg = document.getElementById('msgDocx');
+    if (!texto.trim()) {
+      msg.innerText = 'Digite algum texto.';
+      return;
+    }
+
+    const blob = window.htmlDocx.asBlob('<html><body>' + texto.replace(/\n/g, '<br>') + '</body></html>');
+    const link = document.createElement('a');
+    link.href = URL.createObjectURL(blob);
+    link.download = 'documento.docx';
+    link.click();
+    msg.innerText = '✅ Documento DOCX baixado!';
   }
 </script>
-
 </body>
 </html>
